--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "postcss": "^8.5.2",
     "process": "^0.11.10",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.16.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.29.0",
     "react-scripts": "^3.0.1",
